2006-03-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle mp3 mime type correctly.
		New devices (copied from libmtp).
		Better "bad folder" errormessage.

2006-03-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added wait_for_event hook to return
	  ptp events.

2006-03-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon Optura 600.

2006-03-16  Marcus Meissner  <marcus@jet.franken.de>

	* Makefile.am, library.c: Enable PTP/IP per default
	  to shake out compile problems on !Linux before
	  release.

2006-03-10  Hubert Figuiere  <hub@figuiere.net>

	* library.c: HP 850 has PTPBUG_DUPE_FILE
	(file_list_func): handle DUPE_FILE bug

	* ptp-bugs.h (PTPBUG_DUPE_FILE): added this PTP bug

2006-03-09  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Kodak C360 (from Debian) 

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip.c,ptp.h,library.c:
	
          PTP/IP protocol implementation.

	  Currently not enabled, just included for
	  reference and the not so faint at heart.

	  Missing:
	  - Still using hardcoded IP address and GUID.
	  - autoconf the UNIX socket function stuff.
	  - PTPIP event handling

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Return the actual PTP protocol return
	  code from the ptp_transaction(). 

	  This makes us see the actual errors the camera
	  reports.

2006-02-06  Marcus Meissner  <marcus@jet.franken.de>
	* library.c: Added EOS 5D

2006-02-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Use event_check and event_wait
	  functions from params struct. Initialise those
	  entries.

2006-01-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Enabled Canon SDRAM capture,
	  using the same methods as the Nikon capture.

2006-01-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Toshiba Gigabeat MTP player.

2006-01-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon SDRAM capture.